@@ -11,3 +11,39 @@ void rescanThread()
 {
     pwalletMain->ScanForWalletTransactions(chainActive.Genesis(), true);
 }
+
+std::string StringFromSeedType(CHDSeed* seed)
+{
+    switch(seed->m_type)
+    {
+        case CHDSeed::CHDSeed::BIP32:
+            return "BIP32";
+        case CHDSeed::CHDSeed::BIP32Legacy:
+            return "BIP32 Legacy";
+        case CHDSeed::CHDSeed::BIP44:
+            return "BIP44";
+        case CHDSeed::CHDSeed::BIP44External:
+            return "BIP44 External";
+        case CHDSeed::CHDSeed::BIP44NoHardening:
+            return "BIP44 No Hardening";
+    }
+    return "unknown";
+}
+
+CHDSeed::SeedType SeedTypeFromString(std::string type)
+{
+    if (type == "BIP32")
+        return CHDSeed::CHDSeed::BIP32;
+    else if (type == "BIP32 Legacy" || type == "Bip32L")
+        return CHDSeed::CHDSeed::BIP32Legacy;
+    else if (type == "BIP44")
+        return CHDSeed::CHDSeed::BIP44;
+    else if (type == "BIP44 External" || type == "BIP44E")
+        return CHDSeed::CHDSeed::BIP44External;
+    else if (type == "BIP44 No Hardening" || type == "BIP44NH")
+        return CHDSeed::CHDSeed::BIP44NoHardening;
+    
+    throw std::runtime_error("Invalid seed type");
+    
+    return CHDSeed::CHDSeed::BIP44;
+}
