@@ -62,13 +62,16 @@ public:
     {
             BIP44 = 0, // New Gulden standard based on BIP44 for /all/ Gulden wallets (desktop/iOS/android)
             BIP32 = 1, // Old Gulden android/iOS wallets
-            BIP32Legacy = 2, // Old 'guldencoin' wallets
-            BIP44External = 3 //External BIP44 wallets like 'coinomi'
+            BIP32Legacy = 2, // Very old 'guldencoin' wallets
+            BIP44External = 3, //External BIP44 wallets like 'coinomi' (uses a different hash that Gulden BIP44)
+            BIP44NoHardening = 4 // Same as BIP44 however with no hardening on accounts (Users have to be more careful with key security but allows for synced read only wallets... whereas with normal BIP44 only accounts are possible)
     };
 
     CHDSeed();
     CHDSeed(SecureString mnemonic, SeedType type);
+    CHDSeed(CExtPubKey& pubkey, SeedType type);
     void Init();
+    void InitReadOnly();
     CAccountHD* GenerateAccount(AccountSubType type, CWalletDB* Db);
 
     
@@ -118,6 +121,15 @@ public:
             READWRITE(purposeKeyPriv);
             READWRITE(cointypeKeyPriv);
         }
+
+        // Read will fail on older wallets
+        try
+        {
+            READWRITE(m_readOnly);
+        }
+        catch(...)
+        {
+        }
     }
      
     std::string getUUID() const;    
@@ -129,6 +141,7 @@ public:
     virtual bool Lock();
     virtual bool Unlock(const CKeyingMaterial& vMasterKeyIn);
     virtual bool Encrypt(CKeyingMaterial& vMasterKeyIn);
+    virtual bool IsReadOnly() { return m_readOnly; };
     
     //What type of seed this is (BIP32 or BIP44)
     SeedType m_type;
@@ -156,6 +169,8 @@ protected:
     CExtKey purposeKeyPriv; //key at m/44'           - BIP44 only
     CExtKey cointypeKeyPriv;//key at m/44'/87'       - BIP44 only
     CKeyingMaterial vMasterKey;//Memory only.
+    
+    bool m_readOnly;
     
     //Contains the encrypted versions of the above - only valid when the account is an encrypted one.
     std::vector<unsigned char> encryptedMnemonic;
