@@ -3,7 +3,9 @@
 New menu item for importing private keys.
 Modify createaccount RPC command so that it can also create legacy accounts.
 Support for read only (watch) HD accounts.
-New RPC commands to read only (watch) HD accounts. getreadonlyaccount, importreadonlyaccount.
+New RPC commands for read only (watch) HD accounts. getreadonlyaccount, importreadonlyaccount.
+Support for read only (watch) HD seeds.
+New RPC command for read only (watch) HD seeds, getreadonlyseed.
 Add new command line flag '-coinbasesignature=' to make it easy to add coinbase signatures to generated blocks (predominantly meant for testnet)
 
 1.6.3
